--- a/compose.yaml
+++ b/compose.yaml
@@ -61,6 +61,20 @@ services:
     mem_reservation: 256m
     cpus: "0.3"
 
+  nginx:
+    image: nginx:1.25-alpine
+    container_name: clube-quinze-nginx
+    depends_on:
+      api:
+        condition: service_started
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+    restart: unless-stopped
+
   db-backup:
     image: prodrigestivill/postgres-backup-local:16
     container_name: clube-quinze-db-backup
