chore: migrate for maria db

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
-DATABASE_URL=jdbc:postgresql://postgres:5432/clube_quinze
-DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=postgres
+DATABASE_URL=jdbc:mariadb://mariadb-host:3306/clube_quinze
+DATABASE_USERNAME=your_user
+DATABASE_PASSWORD=your_password
+MYSQL_HOST=mariadb-host
+MYSQL_PORT=3306
+MYSQL_USER=your_user
+MYSQL_PASSWORD=your_password
+MYSQL_DATABASE=clube_quinze
 # Use a secure base64-encoded secret (32+ bytes) in production. This is a placeholder.
 JWT_SECRET=xXQ+rd9icS2S2k3j8w4bM+zP5u0dQLhN8aYQ+jXcPwo=
 JWT_EXPIRATION_MINUTES=60
