--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,7 +5,8 @@ server {
 }
 
 server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2 on;
     server_name clubequinzeapp.cloud www.clubequinzeapp.cloud;
 
     ssl_certificate     /etc/letsencrypt/live/clubequinzeapp.cloud/fullchain.pem;
@@ -22,7 +23,7 @@ server {
     }
 
     location / {
-        proxy_pass http://api:8080;
+        proxy_pass http://clube-quinze-api:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
