--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:tc:postgresql:15:///clube_quinze_test
+spring.datasource.url=jdbc:tc:mariadb:11:///clube_quinze_test
 spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
 spring.jpa.hibernate.ddl-auto=validate
 spring.flyway.locations=classpath:db/migration
