--- a/compose.yaml
+++ b/compose.yaml
@@ -1,61 +1,20 @@
 services:
-  postgres:
-    image: postgres:15
-    container_name: clube-quinze-postgres
-    restart: unless-stopped
-    mem_limit: 1536m
-    mem_reservation: 512m
-    cpus: "0.6"
-    stop_grace_period: 60s
-    command:
-      - postgres
-      - -c
-      - logging_collector=on
-      - -c
-      - log_destination=stderr
-      - -c
-      - log_connections=on
-      - -c
-      - log_disconnections=on
-      - -c
-      - log_min_duration_statement=0
-      - -c
-      - log_statement=all
-    environment:
-      POSTGRES_DB: clube_quinze
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./backups:/backups:ro
-      - ./scripts/restore-from-backup.sh:/docker-entrypoint-initdb.d/10-restore-from-backup.sh:ro
-      - ./scripts/init-db.sh:/docker-entrypoint-initdb.d/20-init-db.sh:ro
-    healthcheck:
-      test: ["CMD", "pg_isready", "-U", "postgres", "-d", "clube_quinze"]
-      interval: 10s
-      timeout: 5s
-      retries: 6
-      start_period: 40s
 
   api:
     build: .
     container_name: clube-quinze-api
-    depends_on:
-      postgres:
-        condition: service_healthy
-    env_file:
-      - .env.example
+    networks:
+      - mariadb-mnl3_default
     ports:
       - "8080:8080"
     environment:
-      DATABASE_URL: jdbc:postgresql://postgres:5432/clube_quinze
-      DATABASE_USERNAME: postgres
-      DATABASE_PASSWORD: postgres
-      DATABASE_HOST: postgres
-      DATABASE_PORT: 5432
-      SPRING_PROFILES_ACTIVE: prod
+      DATABASE_URL: ${DATABASE_URL}
+      DATABASE_USERNAME: ${DATABASE_USERNAME}
+      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+      JWT_SECRET: ${JWT_SECRET}
+      JWT_EXPIRATION_MINUTES: ${JWT_EXPIRATION_MINUTES}
+      JWT_REFRESH_EXPIRATION_DAYS: ${JWT_REFRESH_EXPIRATION_DAYS}
+      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-prod}
     restart: unless-stopped
     mem_limit: 768m
     mem_reservation: 256m
@@ -67,40 +26,40 @@ services:
     depends_on:
       api:
         condition: service_started
+    networks:
+      - mariadb-mnl3_default
     ports:
       - "80:80"
       - "443:443"
     volumes:
+      # Caminho relativo para funcionar no pipeline (o compose roda no checkout em /tmp/...)
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
     restart: unless-stopped
 
   db-backup:
-    image: prodrigestivill/postgres-backup-local:16
+    image: fradelg/mysql-cron-backup
     container_name: clube-quinze-db-backup
     restart: unless-stopped
-    depends_on:
-      postgres:
-        condition: service_healthy
+    networks:
+      - mariadb-mnl3_default
     mem_limit: 512m
     mem_reservation: 128m
     cpus: "0.2"
     environment:
-      POSTGRES_HOST: postgres
-      POSTGRES_DB: clube_quinze
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_EXTRA_OPTS: -n clube_quinze_app
-      SCHEDULE: "0 3 * * *"
-      BACKUP_KEEP_DAYS: 7
-      BACKUP_KEEP_WEEKS: 4
-      BACKUP_KEEP_MONTHS: 6
-      HEALTHCHECK_PORT: 8080
-      LOG_LEVEL: debug
+      MYSQL_HOST: ${MYSQL_HOST}
+      MYSQL_PORT: ${MYSQL_PORT:-3306}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASS: ${MYSQL_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      CRON_TIME: "0 3 * * *"
+      MAX_BACKUPS: 30
+      INIT_BACKUP: "false"
+      GZIP_LEVEL: 9
     volumes:
-      - ./backups:/backups
+      - ./backups:/backup
 
-volumes:
-  postgres_data:
-    name: clube-quinze-postgres-data  # volume nomeado garante persistência estável para backups
+networks:
+  mariadb-mnl3_default:
+    external: true
   # maven_cache: # opcional: habilite se quiser acelerar builds locais montando ~/.m2
