--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,19 @@
 spring.application.name=clube-quinze
 
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/clube_quinze}
-spring.datasource.username=${DATABASE_USERNAME:postgres}
-spring.datasource.password=${DATABASE_PASSWORD:postgres}
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${DATABASE_URL:jdbc:mariadb://localhost:3306/clube_quinze}
+spring.datasource.username=${DATABASE_USERNAME:clube_quinze}
+spring.datasource.password=${DATABASE_PASSWORD:clube_quinze}
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.default_schema=clube_quinze_app
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jpa.properties.hibernate.type.preferred_uuid_jdbc_type=CHAR
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
-spring.flyway.default-schema=clube_quinze_app
-spring.flyway.schemas=clube_quinze_app
+spring.flyway.schemas=clube_quinze
 
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
