--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -22,6 +22,13 @@ server {
         add_header Content-Type text/plain;
     }
 
+    location /uploads/ {
+        alias /var/www/uploads/;
+        add_header Cache-Control "public, max-age=31536000";
+        try_files $uri =404;
+        access_log off;
+    }
+
     location / {
         proxy_pass http://clube-quinze-api:8080;
         proxy_set_header Host $host;
