--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,11 @@ spring.datasource.url=${DATABASE_URL:jdbc:mariadb://localhost:3306/clube_quinze}
 spring.datasource.username=${DATABASE_USERNAME:clube_quinze}
 spring.datasource.password=${DATABASE_PASSWORD:clube_quinze}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.hikari.maximum-pool-size=${HIKARI_MAX_POOL_SIZE:20}
+spring.datasource.hikari.minimum-idle=${HIKARI_MIN_IDLE:5}
+spring.datasource.hikari.connection-timeout=${HIKARI_CONNECTION_TIMEOUT_MS:30000}
+spring.datasource.hikari.idle-timeout=${HIKARI_IDLE_TIMEOUT_MS:600000}
+spring.datasource.hikari.max-lifetime=${HIKARI_MAX_LIFETIME_MS:1700000}
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
@@ -18,12 +23,42 @@ spring.flyway.schemas=clube_quinze
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
-management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.probes.enabled=true
 
+# Server
+server.shutdown=graceful
+spring.lifecycle.timeout-per-shutdown-phase=20s
+# Deixar defaults de threads do Tomcat, mas pode ser parametrizado se precisar:
+# server.tomcat.threads.max=${TOMCAT_MAX_THREADS:200}
+# server.tomcat.accept-count=${TOMCAT_ACCEPT_COUNT:100}
+
 logging.level.org.springframework.security=INFO
-logging.level.br.com.clube_quinze.api=DEBUG
+logging.level.br.com.clube_quinze.api=INFO
+
+# Async executor
+app.async.core-pool-size=${ASYNC_CORE_POOL_SIZE:4}
+app.async.max-pool-size=${ASYNC_MAX_POOL_SIZE:8}
+app.async.queue-capacity=${ASYNC_QUEUE_CAPACITY:100}
+app.async.thread-name-prefix=async-
 
 app.security.jwt.secret=${JWT_SECRET:xXQ+rd9icS2S2k3j8w4bM+zP5u0dQLhN8aYQ+jXcPwo=}
 app.security.jwt.expiration-minutes=${JWT_EXPIRATION_MINUTES:30}
 app.security.jwt.refresh-expiration-days=${JWT_REFRESH_EXPIRATION_DAYS:7}
+
+# Upload/media storage
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=20MB
+app.media.storage-path=${MEDIA_STORAGE_PATH:/uploads}
+app.media.base-url=${MEDIA_BASE_URL:https://clubequinzeapp.cloud/uploads}
+
+# Email
+spring.mail.host=${MAIL_HOST:localhost}
+spring.mail.port=${MAIL_PORT:1025}
+spring.mail.username=${MAIL_USERNAME:}
+spring.mail.password=${MAIL_PASSWORD:}
+spring.mail.properties.mail.smtp.auth=${MAIL_SMTP_AUTH:false}
+spring.mail.properties.mail.smtp.starttls.enable=${MAIL_SMTP_STARTTLS:false}
+spring.mail.properties.mail.smtp.starttls.required=${MAIL_SMTP_STARTTLS_REQUIRED:false}
+spring.mail.default-encoding=UTF-8
+app.mail.from=${MAIL_FROM:no-reply@clubequinzeapp.cloud}
