chore: add privacy

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,23 @@
-DATABASE_URL=jdbc:mariadb://mariadb-host:3306/clube_quinze
-DATABASE_USERNAME=your_user
-DATABASE_PASSWORD=your_password
-MYSQL_HOST=mariadb-host
+# Copie este arquivo para `.env` e preencha com os valores reais antes de subir o Docker Compose.
+DATABASE_URL=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
+MYSQL_HOST=
 MYSQL_PORT=3306
-MYSQL_USER=your_user
-MYSQL_PASSWORD=your_password
-MYSQL_DATABASE=clube_quinze
-# Use a secure base64-encoded secret (32+ bytes) in production. This is a placeholder.
-JWT_SECRET=xXQ+rd9icS2S2k3j8w4bM+zP5u0dQLhN8aYQ+jXcPwo=
+MYSQL_USER=
+MYSQL_PASSWORD=
+MYSQL_DATABASE=
+JWT_SECRET=
 JWT_EXPIRATION_MINUTES=60
 JWT_REFRESH_EXPIRATION_DAYS=14
 SPRING_PROFILES_ACTIVE=prod
-
+MAIL_HOST=
+MAIL_PORT=2525
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_SMTP_AUTH=true
+MAIL_SMTP_STARTTLS=true
+MAIL_SMTP_STARTTLS_REQUIRED=false
+MAIL_FROM=no-reply@clubequinzeapp.cloud
+MEDIA_STORAGE_PATH=/uploads
+MEDIA_BASE_URL=https://clubequinzeapp.cloud/uploads
