chore: add privacy

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -39,4 +39,10 @@ server {
         proxy_set_header Connection "";
         proxy_read_timeout 60s;
     }
+
+    location = /privacy-policy {
+        default_type text/html;
+        alias /var/www/policies/privacy.html;
+        add_header Cache-Control "public, max-age=86400";
+    }
 }
