--- a/compose.yaml
+++ b/compose.yaml
@@ -50,6 +50,7 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
       - ./uploads:/var/www/uploads:ro
+      - ./nginx/policies:/var/www/policies:ro
     restart: unless-stopped
 
   db-backup:
