--- a/compose.yaml
+++ b/compose.yaml
@@ -1,12 +1,6 @@
 services:
-
   api:
-    build:
-      context: .
-      no_cache: true
-      args:
-        REPO_URL: ${REPO_URL:-https://github.com/Andre0Luis/clube_quinze_backend.git}
-        REPO_REF: ${REPO_REF:-main}
+    image: ghcr.io/andre0luis/clube-quinze-backend:latest # ajuste para a sua imagem real
     container_name: clube-quinze-api
     env_file:
       - .env
@@ -43,15 +37,13 @@ services:
     image: nginx:1.25-alpine
     container_name: clube-quinze-nginx
     depends_on:
-      api:
-        condition: service_started
+      - api
     networks:
       - mariadb-mnl3_default
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      # Caminho relativo para funcionar no pipeline (o compose roda no checkout em /tmp/...)
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
       - ./uploads:/var/www/uploads:ro
@@ -85,4 +77,3 @@ services:
 networks:
   mariadb-mnl3_default:
     external: true
-  # maven_cache: # opcional: habilite se quiser acelerar builds locais montando ~/.m2
