--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,10 +46,14 @@ app.security.jwt.secret=${JWT_SECRET:xXQ+rd9icS2S2k3j8w4bM+zP5u0dQLhN8aYQ+jXcPwo
 app.security.jwt.expiration-minutes=${JWT_EXPIRATION_MINUTES:30}
 app.security.jwt.refresh-expiration-days=${JWT_REFRESH_EXPIRATION_DAYS:7}
 
+# Password reset
+app.security.reset.expiration-minutes=${RESET_EXPIRATION_MINUTES:30}
+app.security.reset.base-url=${RESET_BASE_URL:https://clubequinzeapp.cloud/reset-password}
+
 # Upload/media storage
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
-app.media.storage-path=${MEDIA_STORAGE_PATH:/uploads}
+app.media.storage-path=${MEDIA_STORAGE_PATH:/var/www/uploads}
 app.media.base-url=${MEDIA_BASE_URL:https://clubequinzeapp.cloud/uploads}
 
 # Email
