Add MailerSend notification provider

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,8 +51,8 @@ app.security.reset.expiration-minutes=${RESET_EXPIRATION_MINUTES:30}
 app.security.reset.base-url=${RESET_BASE_URL:https://clubequinzeapp.cloud/reset-password}
 
 # Upload/media storage
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=20MB
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=30MB
 app.media.storage-path=${MEDIA_STORAGE_PATH:/var/www/uploads}
 app.media.base-url=${MEDIA_BASE_URL:https://clubequinzeapp.cloud/uploads}
 
@@ -66,3 +66,6 @@ spring.mail.properties.mail.smtp.starttls.enable=${MAIL_SMTP_STARTTLS:false}
 spring.mail.properties.mail.smtp.starttls.required=${MAIL_SMTP_STARTTLS_REQUIRED:false}
 spring.mail.default-encoding=UTF-8
 app.mail.from=${MAIL_FROM:no-reply@clubequinzeapp.cloud}
+app.mailer-send.enabled=${MAILER_SEND_ENABLED:false}
+app.mailer-send.token=${MAILER_SEND_TOKEN:}
+app.mailer-send.from-name=${MAIL_FROM_NAME:Clube Quinze}
