--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>br.com.clube_quinze</groupId>
 	<artifactId>api</artifactId>
-	<version>0.0.7-SNAPSHOT</version>
+	<version>0.0.9-SNAPSHOT</version>
 	<name>clube_quinze</name>
 	<description>Clube Quinze backend services</description>
 	<url/>
@@ -75,6 +75,12 @@
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>${springdoc.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.mailersend</groupId>
+			<artifactId>java-sdk</artifactId>
+			<version>1.4.1</version>
 		</dependency>
 
 		<dependency>
