--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,3 +69,4 @@ app.mail.from=${MAIL_FROM:no-reply@clubequinzeapp.cloud}
 app.mailer-send.enabled=${MAILER_SEND_ENABLED:true}
 app.mailer-send.token=${MAILER_SEND_TOKEN:}
 app.mailer-send.from-name=${MAIL_FROM_NAME:Clube Quinze}
+app.notifications.logging.enabled=${NOTIFICATIONS_LOGGING_ENABLED:false}
