--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -66,7 +66,8 @@ spring.mail.properties.mail.smtp.starttls.enable=${MAIL_SMTP_STARTTLS:false}
 spring.mail.properties.mail.smtp.starttls.required=${MAIL_SMTP_STARTTLS_REQUIRED:false}
 spring.mail.default-encoding=UTF-8
 app.mail.from=${MAIL_FROM:no-reply@clubequinzeapp.cloud}
-app.mailer-send.enabled=${MAILER_SEND_ENABLED:true}
-app.mailer-send.token=${MAILER_SEND_TOKEN:}
-app.mailer-send.from-name=${MAIL_FROM_NAME:Clube Quinze}
+app.mail.from-name=${MAIL_FROM_NAME:Clube Quinze}
+app.brevo.enabled=${BREVO_ENABLED:true}
+app.brevo.api-key=${MAILER_SEND_TOKEN:}
+app.brevo.base-url=${BREVO_BASE_URL:https://api.brevo.com}
 app.notifications.logging.enabled=${NOTIFICATIONS_LOGGING_ENABLED:false}
